Fix overlapping fullscreen editor

--- a/src/Lekplats/styles.scss
+++ b/src/Lekplats/styles.scss
@@ -219,7 +219,7 @@
   opacity: 0;
   position: absolute;
   top: 0;
-  left: -100px;
+  left: -400px;
   overflow: hidden;
 
   .is-editable & {
